properly encode what is sent do gpg processes

-don't destroy UTF8 encoding
-use QByteArray::number() instead of QString::number().toAscii()
-remove bogus Q_UNUSED()

BUG:211399

backport of r1040200

svn path=/branches/KDE/4.3/kdeutils/kgpg/; revision=1040201